Fixed links gap

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
   margin: 0;
 }
 
+/* Header */
 header {
   display: flex;
   justify-content: space-evenly;
@@ -24,6 +25,7 @@ header {
 ul {
   display: flex;
   list-style: none;
+  gap: 20px;
 }
 
 ul li a {
